<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="ThoughtUser" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AVW-lH-U0h">
                                <rect key="frame" x="129" y="485" width="61" height="35"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="submitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dQL-Rw-ycf"/>
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="a8J-SE-oZ8">
                                <rect key="frame" x="80" y="223" width="160" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4XP-Xf-8Qs">
                                <rect key="frame" x="80" y="269" width="160" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="sNO-JS-wg0">
                                <rect key="frame" x="80" y="315" width="160" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Verify Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="88T-Vi-FTw">
                                <rect key="frame" x="80" y="361" width="160" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ThoughtUser" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i4p-fI-HcD">
                                <rect key="frame" x="104" y="100" width="112" height="23"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Display Name (Optional)" textAlignment="natural" minimumFontSize="12" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="wKZ-w2-lt4">
                                <rect key="frame" x="80" y="423" width="160" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" red="0.090196078430000007" green="0.60784313729999995" blue="0.83921568629999999" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="88T-Vi-FTw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6bs-AL-pzw"/>
                            <constraint firstItem="sNO-JS-wg0" firstAttribute="top" secondItem="4XP-Xf-8Qs" secondAttribute="bottom" constant="16" id="6gg-W7-txT"/>
                            <constraint firstItem="sNO-JS-wg0" firstAttribute="width" secondItem="4XP-Xf-8Qs" secondAttribute="width" id="9IU-cv-pDy"/>
                            <constraint firstItem="4XP-Xf-8Qs" firstAttribute="width" secondItem="a8J-SE-oZ8" secondAttribute="width" id="Ra6-Wt-04e"/>
                            <constraint firstItem="4XP-Xf-8Qs" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="YcA-k5-V5Y"/>
                            <constraint firstItem="a8J-SE-oZ8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="b7K-lP-FLO"/>
                            <constraint firstItem="4XP-Xf-8Qs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fUY-XD-ZZL"/>
                            <constraint firstItem="wKZ-w2-lt4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fhf-yG-lqD"/>
                            <constraint firstItem="i4p-fI-HcD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gsX-TC-bkU"/>
                            <constraint firstItem="88T-Vi-FTw" firstAttribute="top" secondItem="sNO-JS-wg0" secondAttribute="bottom" constant="16" id="hKb-Qw-VqM"/>
                            <constraint firstItem="4XP-Xf-8Qs" firstAttribute="top" secondItem="a8J-SE-oZ8" secondAttribute="bottom" constant="16" id="lhY-gZ-56N"/>
                            <constraint firstItem="AVW-lH-U0h" firstAttribute="top" secondItem="wKZ-w2-lt4" secondAttribute="bottom" constant="32" id="nKY-iF-D4a"/>
                            <constraint firstItem="a8J-SE-oZ8" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="50:100" id="oGa-J5-7yH"/>
                            <constraint firstItem="wfy-db-euE" firstAttribute="top" relation="greaterThanOrEqual" secondItem="AVW-lH-U0h" secondAttribute="bottom" constant="8" id="oIq-I6-GkK"/>
                            <constraint firstItem="wKZ-w2-lt4" firstAttribute="width" secondItem="88T-Vi-FTw" secondAttribute="width" id="pP1-M9-zej"/>
                            <constraint firstItem="wKZ-w2-lt4" firstAttribute="top" secondItem="88T-Vi-FTw" secondAttribute="bottom" constant="32" id="rnG-qD-gxu"/>
                            <constraint firstItem="i4p-fI-HcD" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="80" id="ugw-HD-59L"/>
                            <constraint firstItem="AVW-lH-U0h" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wHf-YP-v3o"/>
                            <constraint firstItem="88T-Vi-FTw" firstAttribute="width" secondItem="sNO-JS-wg0" secondAttribute="width" id="wdX-gL-zOx"/>
                            <constraint firstItem="sNO-JS-wg0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xKh-3v-7wK"/>
                        </constraints>
                    </view>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <connections>
                        <outlet property="displayNameField" destination="wKZ-w2-lt4" id="Chl-OK-uhH"/>
                        <outlet property="emailField" destination="4XP-Xf-8Qs" id="OdM-Ba-TYf"/>
                        <outlet property="passwordField" destination="sNO-JS-wg0" id="wn6-bb-Usa"/>
                        <outlet property="passwordVerificationField" destination="88T-Vi-FTw" id="0q0-y3-zGL"/>
                        <outlet property="submitButton" destination="AVW-lH-U0h" id="Kad-y1-3pX"/>
                        <outlet property="userNameField" destination="a8J-SE-oZ8" id="eZb-P6-rEY"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="319" y="365"/>
        </scene>
    </scenes>
</document>
